# FastAPI-Rack-Device-Project

./: Dockerfile  README.Docker.md  README.md  compose.yaml  hardware.db  pyproject.toml
.github/workflows/: fastapicicd.yml
src/: algorithm_for_allocation.py  app.py  db.py  schemas.py
src/routers/: devices.py  racks.py
tests/: test_devicerackdistribution.py
